--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -155,6 +155,30 @@ h1, h2, h3, h4
 .indent-3
   padding-left: 60px
 
+.flat-form
+  form
+    input
+      border-radius: 0px
+      font-size: 16px
+      line-height: 20px
+      font-family: 'Raleway', sans-serif
+      padding: 10px
+      box-shadow: none
+      display: block
+    .input-block-level-password
+      width: 100%
+      float: left
+      #user_password
+        width: 80%
+        float: left
+      #user_password_show
+        font-family: 'Raleway', sans-serif
+        width: 19%
+        float: right
+        height: 40px
+        padding: 10px
+        @include boxsizing
+
 ////////////////////////////////////////
 
 /* Media Objects */
@@ -745,6 +769,7 @@ h1, h2, h3, h4
   @include transition(all 100ms)
   &:hover
     background: gray
+    color: white
     @include transition(all 100ms)
 
 .btn-gray
