--- a/app/views/uploads/show.html.haml
+++ b/app/views/uploads/show.html.haml
@@ -3,3 +3,6 @@
     .span8.offset2
       %h3= "#{@user.name} uploaded a photo for #{@upload.activity.title}"
       = image_tag filepicker_hero_image(@upload.image_id)
+      = link_to "https://twitter.com/intent/tweet?text=I love this: #{@upload.recipe_name} from @ChefSteps!&url=#{ url_encode(current_url(request))}", class: 'btn btn-primary btn-large' do
+        %i.icon-twitter
+        %span Twitter
