--- a/app/views/uploads/show.html.haml
+++ b/app/views/uploads/show.html.haml
@@ -2,6 +2,7 @@
   .row
     .span12
       %h3= "#{link_to @user.name, user_profile_path(@user)} uploaded a photo for #{link_to @upload.activity.title, @upload.activity}".html_safe
+      %h4= "Part of the #{link_to @upload.course.title, @upload.course} course.".html_safe
   .row
     .span6
       = image_tag filepicker_hero_image(@upload.image_id)
