updated the kit contents

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -65,9 +65,8 @@
           /= image_tag 'https://www.filepicker.io/api/file/5wKEDSXZQgCgtA5W7JxI'
           %h4= "The Creative Kit includes"
           %ul
-            %li Syringe for direct spherification
-            %li Stainless steel dosing spoon for reverse spherification
-            %li Stainless steel straining spoon
+            %li Syringe 
+            %li Stainless-steel straining spoon
             %li 25 g Sphere Magic
             %li 25 g Sodium Citrate
             %li 50 g Calcium Lactate Gluconate
@@ -97,11 +96,12 @@
           = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
           %h4= "The Enthusiast Kit includes"
           %ul
-            %li Syringe for direct spherification
-            %li Stainless steel dosing spoon for reverse spherification
-            %li Stainless steel straining spoon
+            %li Pocket Scale
+            %li Stainless-steel straining spoon
+            %li Syringe
+            %li Modernist Ravioli Mold
             %li 25 g Sphere Magic
-            %li 25 g Sodium Citrate
+            %li 25 g SHMP
             %li 50 g Calcium Lactate Gluconate
             %li 50 g Calcium Chloride
             %li 50 g Xanthan Gum
@@ -130,9 +130,11 @@
           = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
           %h4= "The Professional Kit includes"
           %ul
-            %li Syringe for direct spherification
-            %li Stainless steel dosing spoon for reverse spherification
+            %li Pocket Scale (100 g to .01 g)
             %li Stainless steel straining spoon
+            %li Syringe
+            %li Rapid Caviar Dropper
+            %li Modernist Ravioli Mold
             %li 25 g Sphere Magic
             %li 25 g Sodium Citrate
             %li 50 g Calcium Lactate Gluconate
