[profile] tab styling

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -149,12 +149,31 @@ h1, h2, h3, h4
         color: white
         border-radius: 0px
   li.active
+    position: relative
     a
       border: none
       &:hover
         border: none
+    &:after
+      content: ''
+      width: 15px
+      height: 15px
+      background: white
+      position: absolute
+      bottom: -29px
+      left: 40%
+      border: 1px solid $light-gray
+      border-right: 0px
+      border-bottom: 0px
+      -moz-transform: rotate(45deg)
+      -webkit-transform: rotate(45deg)
+      -o-transform: rotate(45deg)
+      transform: rotate(45deg)
 
 .tab-content
+  border: 1px solid $light-gray
+  padding: 10px
+  @include boxsizing
   .tab-pane
     overflow: hidden
 
