[media list item] styling updates

--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -100,3 +100,17 @@
     cursor: pointer
     a
       text-decoration: none
+
+.media-list-item
+  float: left
+  width: 100%
+  clear: both
+  .media-list-item-image
+    width: 30%
+    float: left
+  .media-list-item-text
+    width: 65%
+    margin-left: 5%
+    float: left
+    .media-list-item-title
+    .media-list-item-details
