--- a/app/views/shared/_media_list_item.html.haml
+++ b/app/views/shared/_media_list_item.html.haml
@@ -1,6 +1,8 @@
-.media-list-item-image
-  = image_tag filepicker_gallery_image(image)
-.media-list-item-title
-  %h3= title
-.media-list-item-text
-  = text
+.media-list-item
+  .media-list-item-image
+    = image_tag filepicker_gallery_image(image)
+  .media-list-item-text
+    .media-list-item-title
+      %h3= title
+    .media-list-item-details
+      = text
