--- a/app/views/shared/_media_list_item.html.haml
+++ b/app/views/shared/_media_list_item.html.haml
@@ -3,6 +3,6 @@
     = image_tag filepicker_gallery_image(image)
   .media-list-item-text
     .media-list-item-title
-      %h3= title
-    .media-list-item-details
+      %h4= title
+    .media-list-item-details.black-link
       = text
