--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -1,24 +1,24 @@
 @import 'mixins'
 
 .timeline
-  background: blue
-  .event
-    float: left
-    width: 100%
-    .event-object
-      float: left
-      width: 80%
-      .event-circle
+  .timeline-circle
+    padding-right: 20%
+    .timeline-circle-img
+      position: relative
+      width: 100%
+      img
         width: 100%
-        background: red
-        float: left
-        img
-          width: 100%
-      .event-text
-        float: left
-        width: 100%
-    .event-line
-      width: 20%
-      height: 50%
-      float: left
-      background: green
+        border: 2px solid $orange
+        @include boxsizing
+      &:after
+        content: ''
+        position: absolute
+        width: 20%
+        top: 50%
+        right: -25%
+        border-top: 1px solid gray
+        border-bottom: 1px solid gray
+    .timeline-circle-text
+      width: 100%
+      height: 10%
+      margin-top: 10px
