--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -49,8 +49,9 @@
     .span5
       %h4 Timeline
       .timeline
-        - @user.events.timeline.each do |event|
-          = render "events/#{event.trackable_type.underscore}/#{event.action}", event: event
+        - @user.events.timeline.each_with_index do |event, index|
+          - direction = index.even? ? 'left' : 'right'
+          = render "events/#{event.trackable_type.underscore}/#{event.action}", event: event, direction: direction
 
 = content_for :footer do
   = render 'layouts/footer'
