[timeline] left and right

--- a/app/views/events/upload/_create.html.haml
+++ b/app/views/events/upload/_create.html.haml
@@ -1,4 +1,4 @@
-- direction = 'left' || direction
+- direction = direction || 'left'
 .timeline-circle{data: {direction: direction}}
   .timeline-circle-img
     = image_tag filepicker_circle_image(event.trackable.image_id), class: 'img-circle'
