--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -1,7 +1,7 @@
 @import 'mixins'
 
 .timeline
-  .timeline-circle
+  .timeline-circle[data-direction='left']
     padding-right: 20%
     .timeline-circle-img
       position: relative
@@ -16,6 +16,27 @@
         width: 20%
         top: 50%
         right: -25%
+        border-top: 1px solid gray
+        border-bottom: 1px solid gray
+    .timeline-circle-text
+      width: 100%
+      height: 10%
+      margin-top: 10px
+  .timeline-circle[data-direction='right']
+    padding-left: 20%
+    .timeline-circle-img
+      position: relative
+      width: 100%
+      img
+        width: 100%
+        border: 2px solid $orange
+        @include boxsizing
+      &:after
+        content: ''
+        position: absolute
+        width: 20%
+        top: 50%
+        left: -25%
         border-top: 1px solid gray
         border-bottom: 1px solid gray
     .timeline-circle-text
