--- a/app/views/events/upload/_create.html.haml
+++ b/app/views/events/upload/_create.html.haml
@@ -1,7 +1,8 @@
 - direction = direction || 'left'
 .timeline-circle{data: {direction: direction}}
   .timeline-circle-img
-    = image_tag filepicker_circle_image(event.trackable.image_id), class: 'img-circle'
+    = link_to event.trackable do
+      = image_tag filepicker_circle_image(event.trackable.image_id), class: 'img-circle'
   .timeline-circle-text.text-center
     %div You uploaded a photo
     %div= time_ago_in_words(event.created_at) + ' ago'
