--- a/app/views/events/course/_enroll.html.haml
+++ b/app/views/events/course/_enroll.html.haml
@@ -1,4 +1,7 @@
-%div
-  = "You enrolled into the #{link_to event.trackable.title, event.trackable} course.".html_safe
-%div
-  = time_ago_in_words(event.created_at) + ' ago'
+- direction = direction || 'left'
+.timeline-text-only{data: {direction: direction}}
+  .timeline-text-only-text.text-center
+    %div
+      = "You enrolled into the #{link_to event.trackable.title, event.trackable} course.".html_safe
+    %div
+      = time_ago_in_words(event.created_at) + ' ago'
