--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -10,6 +10,7 @@
       position: absolute
       border-left: 1px solid gray
       border-right: 1px solid gray
+      margin-left: -1px
       left: 50%
       height: 100%
     .timeline-left
@@ -19,6 +20,25 @@
       width: 50%
       float: right
       padding-top: 30%
+    .timeline-start
+      position: absolute
+      width: 14px
+      height: 14px
+      left: 50%
+      background: $orange
+      margin-left: -7px
+      margin-top: -7px
+      border-radius: 7px
+    .timeline-end
+      position: absolute
+      width: 14px
+      height: 14px
+      left: 50%
+      bottom: 0px
+      background: $orange
+      margin-left: -7px
+      margin-top: -7px
+      border-radius: 7px
 
 // TIMELINE CIRCLE //
 .timeline-circle[data-direction='left']
