--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -90,3 +90,8 @@
     position: absolute
     top: 10px
     right: 10px
+
+@media (max-width: 1200px)
+  .course_activity_content
+    padding-left: 20px
+    padding-right: 20px
