--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -208,7 +208,7 @@ h1, h2, h3, h4
       #user_password
         width: 80%
         float: left
-      #user_password_show
+      #user-password-show
         font-family: 'Raleway', sans-serif
         width: 19%
         float: right
