[timeline] new user fix

--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -3,6 +3,7 @@
 .timeline
   .timeline-media
     position: relative
+    width: 100%
     margin: 10px 0px
     float: left
     @include boxsizing
@@ -15,9 +16,11 @@
       height: 100%
     .timeline-left
       width: 50%
+      min-height: 50px
       float: left
     .timeline-right
       width: 50%
+      min-height: 50px
       float: right
       padding-top: 30%
     .timeline-start
